--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -8,9 +8,12 @@
 /* Mobiles */
 @media (max-width: 767px) {
   body {
-    background: linear-gradient(90deg, yellow, blue, red);
     padding: 12% 8%;
   }
+}
+
+body {
+  background: linear-gradient(90deg, yellow, blue, red);
 }
 
 h1 {
