--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background: linear-gradient(90deg, yellow, blue, red);
+  background: linear-gradient(90deg, green, blue, red);
   text-align: center;
   font-family: sans-serif;
 }
