--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -1,3 +1,50 @@
+/*  ============= WEB BROWSER RESETS ============ */
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html {
+  height: 100%;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  scroll-behavior: smooth;
+  scroll-padding-top: 20px;
+}
+body {
+  max-width: 1600px;
+  line-height: 1.5;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+}
+img {
+  width: auto;
+  height: auto;
+  display: block;
+}
+h1,
+h2,
+h3,
+h4 {
+  width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* ================= ENDS ================ */
+
 /* Desktops */
 @media (min-width: 768px) {
   body {
@@ -13,7 +60,7 @@
 }
 
 body {
-  background: linear-gradient(90deg, yellow, blue, red);
+  background: linear-gradient(90deg, blue, yellow, red);
   font-family: sans-serif;
 }
 
