--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -60,10 +60,11 @@ select {
 }
 
 body {
-  background: linear-gradient(90deg, blue, yellow, red);
+  background-color: antiquewhite;
 }
 
 h1 {
+  color: brown;
   font-size: 72px;
   margin-bottom: 56px;
   text-align: center;
@@ -72,6 +73,7 @@ h1 {
 }
 
 h2 {
+  color: brown;
   font-size: 30px;
   margin-bottom: 64px;
   font-family: sans-serif;
@@ -82,11 +84,13 @@ h2 {
 }
 
 h3 {
+  color: brown;
   font-size: 32px;
   margin-bottom: 4px;
 }
 
 p {
+  color: black;
   font-size: 22px;
   line-height: 1.6;
   margin-bottom: 20px;
