--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -60,11 +60,12 @@ select {
 }
 
 body {
-  background: linear-gradient(90deg, blue, yellow, red);
+  background-color: #1f364d;
   font-family: sans-serif;
 }
 
 h1 {
+  color: white;
   font-size: 64px;
   margin-bottom: 48px;
   font-weight: normal;
@@ -72,6 +73,7 @@ h1 {
 }
 
 h2 {
+  color: deeppink;
   font-size: 26px;
   margin-top: 30px;
   margin-bottom: 4px;
@@ -79,6 +81,7 @@ h2 {
 }
 
 h3 {
+  color: lightgreen;
   font-size: 24px;
   margin-top: 42px;
   margin-bottom: 4px;
@@ -86,15 +89,16 @@ h3 {
 }
 
 p {
+  color: #81b8cd;
   font-size: 18px;
   line-height: 1.6;
   margin-bottom: 20px;
 }
 
 a {
-  color: coral;
+  color: Blue;
 }
 
 a:hover {
-  color: green;
+  color: Violet;
 }
