--- a/exercises/assets/css/style-6.css
+++ b/exercises/assets/css/style-6.css
@@ -90,14 +90,6 @@ h2 {
   letter-spacing: 0.5;
 }
 
-a {
-  color: Purple;
-}
-
-a:hover {
-  color: darkblue;
-}
-
 /* Text paragraphs */
 p {
   font-family: "Lato", sans-serif;
@@ -111,4 +103,23 @@ img {
   margin-bottom: 32px;
   /* Soften corners of images*/
   border-radius: 15px;
+}
+
+/* Passive link styles */
+a:link,
+a:visited {
+  text-decoration: none;
+  padding-bottom: 2px;
+  color: #006600;
+  border-bottom: solid 2px #006600;
+}
+
+/* Interactive link styles */
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  padding-bottom: 2px;
+  color: #f26f21;
+  border-bottom: solid 2px blue;
 }
