--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -113,15 +113,15 @@ a:active {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(90deg, #ff00cc, #333399);
+  background: linear-gradient(90deg, skyblue, white, skyblue);
   overflow: none;
 }
 
 @media (min-width: 768px) {
   .hero-block {
-    height: 50vh;
+    height: 80vh;
     /* Purple to orange - modern */
-    background-image: linear-gradient(90deg, #ff00cc, #333399);
+    background-image: linear-gradient(90deg, skyblue, white, skyblue);
   }
 }
 
@@ -142,7 +142,7 @@ a:active {
 .hero-bg-media img {
   object-fit: cover;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .bg-overlay {
@@ -163,13 +163,13 @@ a:active {
 }
 
 .hero-block h1 {
-  font-size: calc(40px + (80 - 40) * ((100vw - 320px) / (1600 - 320)));
+  font-size: calc(64px + (80 - 50) * ((100vw - 320px) / (1600 - 320)));
   margin-bottom: 24px;
 }
 
 .hero-block h2 {
   font-weight: normal;
-  font-size: calc(28px + (50 - 28) * ((100vw - 320px) / (1600 - 320)));
+  font-size: calc(30px + (64 - 30) * ((100vw - 320px) / (1600 - 320)));
   text-transform: uppercase;
 }
 
