--- a/exercises/assets/css/hero-image.css
+++ b/exercises/assets/css/hero-image.css
@@ -26,9 +26,9 @@ body {
   text-rendering: optimizeSpeed;
 }
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
-  display: block;
+  display: center;
 }
 input,
 button,
