--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -26,9 +26,9 @@ body {
   text-rendering: optimizeSpeed;
 }
 img {
-  width: auto;
+  max-width: 100%;
   height: auto;
-  display: block;
+  display: center;
 }
 h1,
 h2,
