--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -26,10 +26,11 @@ body {
   text-rendering: optimizeSpeed;
 }
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
-  display: block;
+  display: center;
 }
+
 h1,
 h2,
 h3,
