--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -206,6 +206,9 @@ body {
 }
 
 /* Theme Four */
+.theme-four {
+  background: #6ea8fe;
+}
 .theme-four .col-1 h3 {
   color: var(--black-000);
 }
@@ -268,4 +271,115 @@ body {
 }
 #contact-form textarea {
   border-color: var(--black-000);
+}
+
+/* Footer */
+footer ul.footer-icons li a:link i,
+footer ul.footer-icons li a:visited i {
+  color: var(--black-000);
+}
+
+footer ul.footer-icons li a:focus i,
+footer ul.footer-icons li a:hover i,
+footer ul.footer-icons li a:active i {
+  color: var(--white-000);
+}
+
+footer ul.footer-links li a:link,
+footer ul.footer-links li a:visited {
+  color: var(--black-000);
+  text-decoration-color: var(--black-000);
+}
+
+footer p.privacy a:link,
+footer p.privacy a:visited {
+  color: var(--black-000);
+  text-decoration-color: var(--black-000);
+}
+
+footer ul.footer-links li a:focus,
+footer ul.footer-links li a:hover,
+footer ul.footer-links li a:active {
+  color: var(--white-000);
+  text-decoration-color: var(--white-000);
+}
+
+footer p.privacy a:focus,
+footer p.privacy a:hover,
+footer p.privacy a:active {
+  color: var(--white-000);
+  text-decoration-color: var(--white-000);
+}
+
+footer h2 {
+  color: var(--black-000);
+}
+footer h3 {
+  color: var(--black-000);
+}
+
+/* Menu */
+.container-menu.menu-desktop {
+  background-color: var(--trans-000);
+}
+.container-menu.menu-mobile {
+  background-color: var(--trans-000);
+}
+.container-menu.menu-mobile ul.mobile-display {
+  background-color: var(--trans-000);
+}
+.container-menu.menu-sticky.menu-desktop.menu-on-scroll,
+.container-menu.menu-sticky.menu-mobile.menu-on-scroll,
+.container-menu.menu-sticky.menu-mobile ul.mobile-display {
+  background-color: var(--blue-300);
+}
+.container-menu.menu-sticky.menu-desktop.menu-on-scroll,
+.container-menu.menu-sticky.menu-mobile.menu-on-scroll,
+.container-menu.menu-sticky.menu-mobile ul.mobile-display {
+  background-color: var(--blue-400);
+}
+.container-menu.menu-on-scroll ul li a:link,
+.container-menu.menu-on-scroll ul li a:visited {
+  color: var(--blue-700);
+}
+.container-menu.menu-on-scroll ul li a:focus,
+.container-menu.menu-on-scroll ul li a:hover,
+.container-menu.menu-on-scroll ul li a:active {
+  color: var(--blue-500);
+}
+.container-menu .item-icon .bar1,
+.container-menu .item-icon .bar2,
+.container-menu .item-icon .bar3 {
+  background-color: var(--white-000);
+}
+.container-menu.menu-mobile ul.mobile-display a:link,
+.container-menu.menu-mobile ul.mobile-display a:visited {
+  color: var(--blue-700);
+}
+.container-menu.menu-mobile ul.mobile-display a:focus,
+.container-menu.menu-mobile ul.mobile-display a:hover,
+.container-menu.menu-mobile ul.mobile-display a:active {
+  color: var(--blue-500);
+}
+.container-menu a#btn-cta:link,
+.container-menu a#btn-cta:visited {
+  background-color: var(--blue-700);
+}
+.container-menu a#btn-cta:link,
+.container-menu a#btn-cta:visited {
+  border-color: var(--blue-700);
+}
+.container-menu a#btn-cta:focus,
+.container-menu a#btn-cta:hover,
+.container-menu a#btn-cta:active {
+  border-color: var(--blue-500);
+}
+.container-menu a:link,
+.container-menu a:visited {
+  color: var(--blue-700);
+}
+.container-menu a:focus,
+.container-menu a:hover,
+.container-menu a:active {
+  color: var(--blue-500);
 }
