--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -319,15 +319,6 @@ footer h3 {
 }
 
 /* Menu */
-.container-menu.menu-desktop {
-  background-color: var(--trans-000);
-}
-.container-menu.menu-mobile {
-  background-color: var(--trans-000);
-}
-.container-menu.menu-mobile ul.mobile-display {
-  background-color: var(--trans-000);
-}
 .container-menu.menu-sticky.menu-desktop.menu-on-scroll,
 .container-menu.menu-sticky.menu-mobile.menu-on-scroll,
 .container-menu.menu-sticky.menu-mobile ul.mobile-display {
@@ -347,19 +338,9 @@ footer h3 {
 .container-menu.menu-on-scroll ul li a:active {
   color: var(--blue-500);
 }
-.container-menu .item-icon .bar1,
-.container-menu .item-icon .bar2,
-.container-menu .item-icon .bar3 {
-  background-color: var(--white-000);
-}
 .container-menu.menu-mobile ul.mobile-display a:link,
 .container-menu.menu-mobile ul.mobile-display a:visited {
   color: var(--blue-700);
-}
-.container-menu.menu-mobile ul.mobile-display a:focus,
-.container-menu.menu-mobile ul.mobile-display a:hover,
-.container-menu.menu-mobile ul.mobile-display a:active {
-  color: var(--blue-500);
 }
 .container-menu a#btn-cta:link,
 .container-menu a#btn-cta:visited {
@@ -382,4 +363,31 @@ footer h3 {
 .container-menu a:hover,
 .container-menu a:active {
   color: var(--blue-500);
+}
+.container-menu .item-icon .bar1,
+.container-menu .item-icon .bar2,
+.container-menu .item-icon .bar3 {
+  background-color: var(--blue-300);
+}
+.container-menu.menu-mobile,
+.container-menu.menu-mobile ul.mobile-display {
+  background-color: var(--blue-300);
+}
+.container-menu.menu-mobile ul.mobile-display a:link,
+.container-menu.menu-mobile ul.mobile-display a:visited {
+  color: var(--blue-600);
+}
+.container-menu.menu-mobile ul.mobile-display a:focus,
+.container-menu.menu-mobile ul.mobile-display a:hover,
+.container-menu.menu-mobile ul.mobile-display a:active {
+  color: var(--blue-500);
+}
+.container-menu.menu-desktop {
+  background-color: var(--trans-000);
+}
+.container-menu.menu-mobile {
+  background-color: var(--trans-000);
+}
+.container-menu.menu-mobile ul.mobile-display {
+  background-color: var(--trans-000);
 }
